---
source: src/tree.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_1:3 -> page_2:head;
	page_2 [shape=record, label="<head>Level 1|<1>·|1|<2>·|2"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<3>·|3|<high_page>·"]
	page_1:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 0|<4>·|4"]

}

